# flight-data-plotter

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  imgui.ini  plot.py  schematic.wsd
inc/: app.h  client.h  control_panel.h  data_storage.h  graph.h  imgui_impl_opengl3.h  imgui_impl_sdl2.h  kalman.h  madgwick.h  network_proxy.h  receiver.h  windows.h
src/: app.cpp  client.cpp  control_panel.cpp  data_storage.cpp  graph.cpp  imgui_impl_sdl2.cpp  kalman.cpp  madgwick.cpp  main.cpp  network_proxy.cpp  receiver.cpp  windows.cpp
